# OOP-Lab-5-6

./: CMakeLists.txt  Lab11-12.pro  diagram.mdj  main.cpp
data/: tutorials.csv
data/watchList/templates/: rowTemplate.html  tableTemplate.html
headers/: CSVRepository.h  Comparator.h  ComparatorAscendingByTitle.h  ComparatorDescendingByDuration.h  ConsoleUI.h  Controller.h  DynamicVector.h  GUI.h  HTMLRepository.h  Repository.h  SQLRepository.h  Tutorial.h  UI.h  adminmenu.h  algorithmUtils.h  exceptions.h  fileUtils.h  graphmenu.h  mainwindow.h  usermenu.h
sources/: CSVRepository.cpp  ConsoleUI.cpp  Controller.cpp  GUI.cpp  HTMLRepository.cpp  Repository.cpp  SQLRepository.cpp  Tutorial.cpp  adminmenu.cpp  fileUtils.cpp  graphmenu.cpp  graphmenu.ui  mainwindow.cpp  qcustomplot.cpp  usermenu.cpp  usermenu.ui
tests/: main.cpp
